--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=C303_Final
 spring.config.import=env.properties
 
 # Database Configuration Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/bank
+spring.datasource.url=jdbc:mysql://localhost:3306/bank_data
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
